fixed main navigation colors in dark mode

--- a/src/components/Navigation/MainNavigation.module.css
+++ b/src/components/Navigation/MainNavigation.module.css
@@ -82,6 +82,11 @@
   text-decoration: underline;
 }
 
+.header__dark a:hover,
+.header__dark a.active {
+  color: var(--theme-two-sixth-color);
+}
+
 .theme-button {
   background: transparent;
   width: 28px;
